ER-1384: Fix too big logo on mobile

--- a/sites/all/themes/orwell/assets/sass/component/_footer.scss
+++ b/sites/all/themes/orwell/assets/sass/component/_footer.scss
@@ -28,6 +28,10 @@
     padding: 1rem 0;
     display: flex;
     place-content: center;
+
+    .branding__logo {
+      max-height: 70px;
+    }
   }
 
   &__ddf {
